--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>TinDog</title>
 
   <!-- Google fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu&display=swap" rel="stylesheet">
 
   <!-- CSS stylesheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -51,12 +51,12 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="main-title">Meet new and interesting dogs nearby.</h1>
+          <h1 class="main-title"><strong>Meet new and interesting dogs nearby.</strong></h1>
           <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
-          <img src="images/iphone6.png" alt="iphone-mockup">
+          <img class="iphone" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
 
