styled nav bar and download buttons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="">Contact</a>
             </li>
@@ -52,8 +52,8 @@
       <div class="row">
         <div class="col-lg-6">
           <h1 class="main-title"><strong>Meet new and interesting dogs nearby.</strong></h1>
-          <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
+          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
           <img class="iphone" src="images/iphone6.png" alt="iphone-mockup">
