--- a/index.html
+++ b/index.html
@@ -65,17 +65,27 @@
   </div>
 
   <!-- Features -->
-
+  <!-- col-lg-3 -->
   <section id="features">
+    <div class="row">
+      <div class="col-lg-4">
+        <i class="fas fa-check-circle feature-icon fa-4x"></i>
+        <h3>Easy to use.</h3>
+        <p>So easy to use, even your dog could do it.</p>
+      </div>
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+      <div class="col-lg-4">
+        <i class="fas fa-bullseye feature-icon fa-4x"></i>
+        <h3>Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+      <div class="col-lg-4">
+        <td><i class="fas fa-heart feature-icon fa-4x"></i></td>
+        <h3>Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
 
   </section>
 
@@ -102,7 +112,6 @@
     <img src="images/tnw.png" alt="tnw-logo">
     <img src="images/bizinsider.png" alt="biz-insider-logo">
     <img src="images/mashable.png" alt="mashable-logo">
-
   </section>
 
 
