--- a/index.html
+++ b/index.html
@@ -65,23 +65,23 @@
   </div>
 
   <!-- Features -->
-  <!-- col-lg-3 -->
   <section id="features">
-    <div class="row">
-      <div class="col-lg-4">
+    <div class="row features-section">
+      
+      <div class="col-lg-4 features-box">
         <i class="fas fa-check-circle feature-icon fa-4x"></i>
         <h3>Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
       </div>
 
-      <div class="col-lg-4">
+      <div class="col-lg-4 features-box">
         <i class="fas fa-bullseye feature-icon fa-4x"></i>
         <h3>Elite Clientele</h3>
         <p>We have all the dogs, the greatest dogs.</p>
       </div>
 
-      <div class="col-lg-4">
-        <td><i class="fas fa-heart feature-icon fa-4x"></i></td>
+      <div class="col-lg-4 features-box">
+        <i class="fas fa-heart feature-icon fa-4x"></i>
         <h3>Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
       </div>
