--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <!-- Features -->
   <section id="features">
     <div class="row features-section">
-      
+
       <div class="col-lg-4 features-box">
         <i class="fas fa-check-circle feature-icon fa-4x"></i>
         <h3>Easy to use.</h3>
@@ -93,14 +93,15 @@
   <!-- Testimonials -->
 
   <section id="testimonials">
+    <div class="testimonial-section">
+      <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+      <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+      <em>Pebbles, New York</em>
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
-
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+      <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+      <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+      <em>Beverly, Illinois</em> -->
+    </div>
 
   </section>
 
@@ -108,10 +109,12 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <div class="press-section">
+      <img src="images/TechCrunch.png" alt="tc-logo">
+      <img src="images/tnw.png" alt="tnw-logo">
+      <img src="images/bizinsider.png" alt="biz-insider-logo">
+      <img src="images/mashable.png" alt="mashable-logo">
+    </div>
   </section>
 
 
