styled title and features sections to overlap with css position

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <section id="title">
-    <div class="container-fluid">
+    <div class="title-section">
 
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
@@ -66,26 +66,29 @@
 
   <!-- Features -->
   <section id="features">
-    <div class="row features-section">
+    <div class="features-div">
+      <div class="row features-section">
 
-      <div class="col-lg-4 features-box">
-        <i class="fas fa-check-circle feature-icon fa-4x"></i>
-        <h3>Easy to use.</h3>
-        <p>So easy to use, even your dog could do it.</p>
-      </div>
+        <div class="col-lg-4 features-box">
+          <i class="fas fa-check-circle feature-icon fa-4x"></i>
+          <h3>Easy to use.</h3>
+          <p>So easy to use, even your dog could do it.</p>
+        </div>
 
-      <div class="col-lg-4 features-box">
-        <i class="fas fa-bullseye feature-icon fa-4x"></i>
-        <h3>Elite Clientele</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
-      </div>
+        <div class="col-lg-4 features-box">
+          <i class="fas fa-bullseye feature-icon fa-4x"></i>
+          <h3>Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
 
-      <div class="col-lg-4 features-box">
-        <i class="fas fa-heart feature-icon fa-4x"></i>
-        <h3>Guaranteed to work.</h3>
-        <p>Find the love of your dog's life or your money back.</p>
+        <div class="col-lg-4 features-box">
+          <i class="fas fa-heart feature-icon fa-4x"></i>
+          <h3>Guaranteed to work.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
+        </div>
       </div>
     </div>
+
 
   </section>
 
