styled footer section

--- a/index.html
+++ b/index.html
@@ -226,7 +226,15 @@
 
   <footer id="footer">
 
-    <p>© Copyright 2018 TinDog</p>
+    <div class="footer-section">
+
+      <i class="fab footer-icons fa-twitter"></i>
+      <i class="fab footer-icons fa-facebook-f"></i>
+      <i class="fab footer-icons fa-instagram"></i>
+      <i class="fas footer-icons fa-envelope"></i>
+
+      <p>© Copyright 2018 TinDog</p>
+    </div>
 
   </footer>
 
