--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -51,7 +51,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="main-title"><strong>Meet new and interesting dogs nearby.</strong></h1>
+          <h1 class="big-heading"><strong>Meet new and interesting dogs nearby.</strong></h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
@@ -71,19 +71,19 @@
 
         <div class="col-lg-4 features-box">
           <i class="fas fa-check-circle feature-icon fa-4x"></i>
-          <h3>Easy to use.</h3>
+          <h3 class="feature-title">Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
         </div>
 
         <div class="col-lg-4 features-box">
           <i class="fas fa-bullseye feature-icon fa-4x"></i>
-          <h3>Elite Clientele</h3>
+          <h3 class="feature-title">Elite Clientele</h3>
           <p>We have all the dogs, the greatest dogs.</p>
         </div>
 
         <div class="col-lg-4 features-box">
           <i class="fas fa-heart feature-icon fa-4x"></i>
-          <h3>Guaranteed to work.</h3>
+          <h3 class="feature-title">Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
         </div>
       </div>
@@ -100,7 +100,7 @@
       <div id="testimonial-carousel" class="carousel slide" data-ride="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+            <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
             <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
             <em>Pebbles, New York</em>
           </div>
@@ -119,16 +119,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-
-      <!-- <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-      <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-      <em>Pebbles, New York</em> -->
-
-      <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-      <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-      <em>Beverly, Illinois</em> -->
     </div>
-
   </section>
 
 
@@ -149,7 +140,7 @@
   <section id="pricing">
     <div class="pricing-section">
 
-      <h2>A Plan for Every Dog's Needs</h2>
+      <h2 class="pricing-heading">A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
 
       <div class="row">
@@ -159,7 +150,7 @@
               <h3>Chihuahua</h3>
             </div>
             <div class="card-body">
-              <h2>Free</h2>
+              <h2 class="pricing-text">Free</h2>
               <p>5 Matches Per Day</p>
               <p>10 Messages Per Day</p>
               <p>Unlimited App Usage</p>
@@ -174,7 +165,7 @@
               <h3>Labrador</h3>
             </div>
             <div class="card-body">
-              <h2>$49 / mo</h2>
+              <h2 class="pricing-text">$49 / mo</h2>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
               <p>Unlimited App Usage</p>
@@ -189,7 +180,7 @@
               <h3>Mastiff</h3>
             </div>
             <div class="card-body">
-              <h2>$99 / mo</h2>
+              <h2 class="pricing-text">$99 / mo</h2>
               <p>Priority Listing</p>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
