refactored background-color and font color per section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <section id="title">
-    <div class="title-section">
+    <div class="colored-section title-section">
 
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
@@ -67,7 +67,7 @@
   <!-- Features -->
   <section id="features">
     <div class="features-div">
-      <div class="row features-section">
+      <div class="row white-section features-section">
 
         <div class="col-lg-4 features-box">
           <i class="fas fa-check-circle feature-icon fa-4x"></i>
@@ -96,7 +96,7 @@
   <!-- Testimonials -->
 
   <section id="testimonials">
-    <div class="testimonial-section">
+    <div class="colored-section testimonial-section">
       <div id="testimonial-carousel" class="carousel slide" data-ride="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -126,7 +126,7 @@
   <!-- Press -->
 
   <section id="press">
-    <div class="press-section">
+    <div class="colored-section press-section">
       <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
       <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
       <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -138,7 +138,7 @@
   <!-- Pricing -->
 
   <section id="pricing">
-    <div class="pricing-section">
+    <div class="white-section pricing-section">
 
       <h2 class="pricing-heading">A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
@@ -204,7 +204,7 @@
 
   <section id="cta">
 
-    <div class="cta-section">
+    <div class="colored-section cta-section">
       <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
       <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
       <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
@@ -217,7 +217,7 @@
 
   <footer id="footer">
 
-    <div class="footer-section">
+    <div class="white-section footer-section">
 
       <i class="fab footer-icons fa-twitter"></i>
       <i class="fab footer-icons fa-facebook-f"></i>
